tests/baselines/reference/inheritedStringIndexersFromDifferentBaseTypes2.errors.txt
tests/cases/compiler/inheritedStringIndexersFromDifferentBaseTypes2.ts(3,5): error TS2413: Numeric index type '[string]: {}' is not assignable to string index type '[string]: { a: any; }'.


==== tests/cases/compiler/inheritedStringIndexersFromDifferentBaseTypes2.ts (1 errors) ====
    // indexer in B is a subtype of indexer in A
    interface A {
        [s: string]: {
        ~~~~~~~~~~~~~~
            a;
    ~~~~~~~~~~
        };
    ~~~~~~
!!! error TS2413: Numeric index type '[string]: {}' is not assignable to string index type '[string]: { a: any; }'.
    }
    interface B {
        [s: number]: {
            a;
            b;
        };
    }
    interface C extends A, B { } // ok
    
    interface D {
        [s: number]: {};
    }
    interface E extends A, D { } // error
    
    interface F extends A, D {
        [s: number]: {
            a;
        };
    } // ok because we overrode D's number index signature